--- a/src/app/components/content/components/kontakt/scss/_kontakt.scss
+++ b/src/app/components/content/components/kontakt/scss/_kontakt.scss
@@ -20,6 +20,8 @@
     @media (max-width: 820px) {
       flex-direction: column;
       align-items: center;
+      padding: 0 2rem;
+      gap: 2rem;
     }
   }
 
@@ -28,6 +30,10 @@
     display: flex;
     margin: 1rem;
     width: 50%;
+    @media (max-width: 820px) {
+      width: 100%;
+      margin: 0;
+    }
 
     div {
       display: flex;
@@ -48,7 +54,7 @@
 
   &::after {
     content: '';
-    height: 25rem;
+    height: 30rem;
     width: 20%;
     position: relative;
     background-image: url("../../../../../assets/images/dune-2_1914ec48.jpg");
