--- a/src/app/components/content/scss/_content.scss
+++ b/src/app/components/content/scss/_content.scss
@@ -1,5 +1,6 @@
 @import "src/app/components/content/components/zakres-badan/scss/zakres-badan";
 @import "src/app/components/content/components/kontakt/scss/kontakt";
+@import "src/app/components/content/components/godziny-pracy/scss/godziny";
 
 .main {
 background-color: seashell;
