--- a/src/app/components/content/components/zakres-badan/scss/_zakres-badan.scss
+++ b/src/app/components/content/components/zakres-badan/scss/_zakres-badan.scss
@@ -42,6 +42,12 @@
         align-items: center;
         flex-direction: column;
         padding-bottom: 3rem;
+        &.instruktorzy {
+          align-self: flex-start;
+        }
+        &.bron {
+          width: 100%;
+        }
         @media (max-width: 820px) {
           width: 100%;
         }
