--- a/src/app/components/header/scss/_header.scss
+++ b/src/app/components/header/scss/_header.scss
@@ -3,6 +3,15 @@
   justify-content: flex-end;
   padding-right: 2rem;
   padding-top: 1rem;
+  @media(max-width: 820px) {
+    & > div {
+      flex-direction: column;
+      gap: 1rem;
+    }
+    & div > div:nth-child(2){
+      margin-left: 0;
+    }
+  }
 }
 header {
   height: 12rem;
@@ -11,8 +20,9 @@ header {
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  @media (max-width: 610px) {
+  @media (max-width: 820px) {
     text-align: center;
+    height: 9rem;
   }
 
   h1 {
