--- a/src/app/components/content/components/zakres-badan/scss/_zakres-badan.scss
+++ b/src/app/components/content/components/zakres-badan/scss/_zakres-badan.scss
@@ -3,21 +3,22 @@
   border-radius: 1rem;
   width: 90%;
   display: flex;
-  margin: 2rem 0;
   @media (max-width: 820px) {
     flex-direction: column;
   }
-
-  .obrazek-karty {
+  &::before {
+    content: '';
+    height: auto;
     width: 20%;
+    position: relative;
     background-image: url("../../../../../assets/images/dune-2_1914ec48.jpg");
-    background-repeat: no-repeat;
     background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
     border-radius: 1rem 0 0 1rem;
     @media (max-width: 820px) {
-      width: 100%;
       height: 10rem;
-      background-size: cover;
+      width: 100%;
       border-radius: 1rem 1rem 0 0;
     }
   }
