--- a/src/app/components/content/components/kontakt/scss/_kontakt.scss
+++ b/src/app/components/content/components/kontakt/scss/_kontakt.scss
@@ -1,16 +1,19 @@
+@import "src/app/scss/variables/variables";
+@import "src/app/scss/mixins/mixins";
+
 .kontakt {
-  display: flex;
-  width: 90%;
   justify-content: center;
   @media (max-width: 820px) {
     flex-direction: column;
   }
 
   .karta-dane {
-    background-color: rgb(229, 224, 223);
+    background-color: $card-background-color;
     border-radius: 0 1rem 1rem 0;
+    width: 90%;
     @media (max-width: 820px) {
       border-radius: 0 0 1rem 1rem;
+      width: 100%;
     }
   }
 
@@ -46,9 +49,9 @@
 
     strong {
       font-size: 1.25rem;
-      font-family: 'Libre Baskerville', serif;
-      font-weight: 700;
-      padding: 1rem 0;
+      font-family: $libre-baskerville-font;
+      font-weight: $font-weight-bold;
+      padding: 0.7rem 0;
     }
   }
 
@@ -60,9 +63,7 @@
     padding: 0 2rem;
 
     & > div:first-of-type {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include display-flex(center, center);
       width: 100%;
       @media (max-width: 820px) {
         justify-content: flex-start;
@@ -95,35 +96,19 @@
     }
   }
 
-  &::before {
-    content: '';
-    height: auto;
-    width: 20%;
-    position: relative;
-    background-image: url("../../../../../assets/images/dune-2_1914ec48.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: block;
-    border-radius: 1rem 0 0 1rem;
-    @media (max-width: 820px) {
-      height: 10rem;
-      width: 100%;
-      border-radius: 1rem 1rem 0 0;
-    }
+  h4,
+  h5 {
+    font-family: $libre-baskerville-font;
+    font-weight: $font-weight-normal;
   }
 
   h4 {
-    font-family: 'Libre Baskerville', serif;
-    font-weight: 400;
     font-size: 2.5rem;
     padding: 3rem;
   }
 
   h5 {
-    font-family: 'Libre Baskerville', serif;
-    font-weight: 400;
     font-size: 1.25rem;
-    padding-bottom: 2rem;
   }
 
   p.position {
@@ -132,10 +117,8 @@
     border-radius: 0.6rem;
     border: 1px solid black;
     font-size: 1.5rem;
-    background-color: rgb(247, 237, 212);
+    background-color: $position-background;
     margin-right: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include display-flex(center, center);
   }
 }
