--- a/src/app/components/header/scss/_header.scss
+++ b/src/app/components/header/scss/_header.scss
@@ -1,3 +1,6 @@
+@import "src/app/scss/variables/variables";
+@import "src/app/scss/mixins/mixins";
+
 .contact{
   display: flex;
   justify-content: flex-end;
@@ -14,27 +17,22 @@
   }
 }
 header {
+  @include display-flex(center, center);
   height: 12rem;
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   gap: 1rem;
+  font-family: $libre-baskerville-font;
   @media (max-width: 820px) {
     text-align: center;
     height: 9rem;
   }
 
   h1 {
-    font-family: 'Libre Baskerville', serif;
-    font-weight: 700;
     font-size: 2rem;
     color: rgb(92, 78, 61);
     position: relative;
   }
   p {
-    font-family: 'Libre Baskerville', serif;
-    font-weight: 400;
     font-size: 1rem;
     color: rgb(92, 78, 61);
   }
