--- a/src/app/components/content/components/kontakt/scss/_kontakt.scss
+++ b/src/app/components/content/components/kontakt/scss/_kontakt.scss
@@ -1,57 +1,19 @@
 @import "src/app/scss/variables/variables";
 @import "src/app/scss/mixins/mixins";
 
-.kontakt {
+.location {
   justify-content: center;
   @media (max-width: 820px) {
     flex-direction: column;
   }
 
-  .karta-dane {
+  .karta-mapy {
     background-color: $card-background-color;
     border-radius: 0 1rem 1rem 0;
     width: 90%;
     @media (max-width: 820px) {
       border-radius: 0 0 1rem 1rem;
       width: 100%;
-    }
-  }
-
-  .dane {
-    display: flex;
-    padding-left: 3rem;
-    @media (max-width: 820px) {
-      flex-direction: column;
-      align-items: center;
-      padding: 0 2rem;
-      gap: 2rem;
-    }
-  }
-
-  .adress,
-  .numer-kontaktowy {
-    display: flex;
-    margin: 1rem;
-    width: 50%;
-    @media (max-width: 820px) {
-      width: 100%;
-      margin: 0;
-    }
-
-    div {
-      display: flex;
-      flex-direction: column;
-    }
-
-    p {
-      font-size: 1.25rem;
-    }
-
-    strong {
-      font-size: 1.25rem;
-      font-family: $libre-baskerville-font;
-      font-weight: $font-weight-bold;
-      padding: 0.7rem 0;
     }
   }
 
@@ -68,22 +30,30 @@
       @media (max-width: 820px) {
         justify-content: flex-start;
       }
+    }
 
-      & h5 {
-        padding-bottom: 0;
-      }
+    h5 {
+      font-family: "Libre Baskerville", serif;
+      font-weight: 400;
+      font-size: 2.5rem;
+      padding: 2rem;
+      text-align: center;
     }
 
     img {
       &.mapa-dojazdu {
-        width: 30rem;
-        @media (max-width: 360px) {
+        width: 45rem;
+        @media (max-width: 624px) {
           width: 15rem;
+        }
+        @media(min-width: 625px) and (max-width: 1020px) {
+          width: 30rem;
         }
       }
       &.wejscie {
-        width: 15rem;
-        @media (max-width: 360px) {
+        width: 20rem;
+        padding-bottom: 2rem;
+        @media (max-width: 624px) {
           width: 10rem;
         }
       }
@@ -94,31 +64,5 @@
       align-items: center;
       gap: 1rem;
     }
-  }
-
-  h4,
-  h5 {
-    font-family: $libre-baskerville-font;
-    font-weight: $font-weight-normal;
-  }
-
-  h4 {
-    font-size: 2.5rem;
-    padding: 3rem;
-  }
-
-  h5 {
-    font-size: 1.25rem;
-  }
-
-  p.position {
-    width: 3rem;
-    height: 2.25rem;
-    border-radius: 0.6rem;
-    border: 1px solid black;
-    font-size: 1.5rem;
-    background-color: $position-background;
-    margin-right: 2rem;
-    @include display-flex(center, center);
   }
 }
