--- a/src/app/components/content/scss/_content.scss
+++ b/src/app/components/content/scss/_content.scss
@@ -17,11 +17,11 @@
   }
 
   .godziny::after {
-    @include set-pseudo-element(25rem, 0 1rem 1rem 0);
+    @include set-pseudo-element(auto, 0 1rem 1rem 0);
     background-image: url("../../../../app/assets/images/dune-2_1914ec48.jpg");
   }
 
-  .kontakt::before,
+  .location::before,
   .zakres-badan::before {
     @include set-pseudo-element(auto, 1rem 0 0 1rem);
     background-image: url("../../../../app/assets/images/dune-2_1914ec48.jpg");
