--- a/src/app/components/content/components/kontakt/scss/_kontakt.scss
+++ b/src/app/components/content/components/kontakt/scss/_kontakt.scss
@@ -2,6 +2,7 @@
 @import "src/app/scss/mixins/mixins";
 
 .location {
+  color: $text-color;
   justify-content: center;
   @media (max-width: 820px) {
     flex-direction: column;
@@ -33,7 +34,7 @@
     }
 
     h5 {
-      font-family: "Libre Baskerville", serif;
+      font-family: $roboto-slab;
       font-weight: 400;
       font-size: 2.5rem;
       padding: 2rem;
