--- a/src/app/components/content/components/zakres-badan/scss/_zakres-badan.scss
+++ b/src/app/components/content/components/zakres-badan/scss/_zakres-badan.scss
@@ -2,6 +2,8 @@
 @import "src/app/scss/mixins/mixins";
 
 .zakres-badan {
+  color: $text-color;
+  font-family: $roboto-slab;
   @media (max-width: 820px) {
     flex-direction: column;
   }
@@ -75,13 +77,14 @@
   h2,
   h3,
   h4 {
-    font-family: $libre-baskerville-font;
     font-size: 1.5rem;
     padding: 1rem 0;
   }
 
   h2 {
     font-size: 3rem;
+    font-weight: map-get($font-weights, "normal");
+    text-shadow: $text-shadow;
   }
 
   h3 {
@@ -92,6 +95,7 @@
     text-align: center;
   }
   ul {
+    font-family: $roboto;
     list-style: square;
     li {
       padding: 0.5rem 0;
