--- a/src/app/components/header/scss/_header.scss
+++ b/src/app/components/header/scss/_header.scss
@@ -20,21 +20,26 @@ header {
   @include display-flex(center, center);
   height: 12rem;
   flex-direction: column;
-  gap: 1rem;
-  font-family: $libre-baskerville-font;
+  font-family: $roboto-slab;
+  font-weight: map-get($font-weights, 'bold');
+  color: $text-color;
+  text-shadow: $text-shadow;
   @media (max-width: 820px) {
-    text-align: center;
     height: 9rem;
   }
-
-  h1 {
-    font-size: 2rem;
-    color: rgb(92, 78, 61);
-    position: relative;
+  div {
+    width: 70%;
   }
+
   p {
-    font-size: 1rem;
-    color: rgb(92, 78, 61);
+    &:first-of-type {
+      padding-bottom: 1rem;
+    }
+    font-size: 3rem;
+    position: relative;
+    @media (max-width: 835px) {
+      font-size: 1.5rem;
+    }
   }
 }
 
@@ -49,6 +54,6 @@ header:before {
   opacity: 0.3;
   background-image: url("../../../../app/assets/images/dune-2_1914ec48.jpg");
   background-repeat: no-repeat;
-  background-position: 50% 0;
+  background-position: 0 50%;
   background-size: cover;
 }
