--- a/src/app/components/content/components/zakres-badan/scss/_zakres-badan.scss
+++ b/src/app/components/content/components/zakres-badan/scss/_zakres-badan.scss
@@ -11,7 +11,7 @@
   .zakres-badan-content {
     background-color: $card-background-color;
     width: 80%;
-    padding: 2rem 2rem;
+    padding: 2rem 0;
     border-radius: 0 1rem 1rem 0;
     @media (max-width: 820px) {
       width: 100%;
@@ -79,6 +79,7 @@
   h4 {
     font-size: 1.5rem;
     padding: 1rem 0;
+    width: 90%;
   }
 
   h2 {
