--- a/src/app/scss/App.scss
+++ b/src/app/scss/App.scss
@@ -1,4 +1,3 @@
-@import "src/app/scss/reset/reset";
-@import "../components/header/scss/header";
-@import "../components/content/scss/content";
-@import "../components/footer/scss/footer";
+@import 'src/app/scss/reset/reset';
+@import '../components/header/scss/header';
+@import '../components/content/scss/content';
