--- a/src/app/components/content/components/hours/scss/_hours.scss
+++ b/src/app/components/content/components/hours/scss/_hours.scss
@@ -1,15 +1,15 @@
-@import "src/app/scss/variables/variables";
-@import "src/app/scss/mixins/mixins";
+@import 'src/app/scss/variables/variables';
+@import 'src/app/scss/mixins/mixins';
 
-.godziny {
+.hours {
   color: $text-color;
   font-family: $roboto-slab;
-  font-weight: map-get($font-weights, "normal");
+  font-weight: map-get($font-weights, 'normal');
   @media (max-width: 820px) {
     flex-direction: column-reverse;
   }
 
-  .godziny-content {
+  .hours-content {
     width: 100%;
     background-color: $card-background-color;
     @include display-flex(center, center);
@@ -29,8 +29,8 @@
         font-family: $roboto;
 
         &:nth-child(3),
-        &:nth-child(5), {
-          font-weight: map-get($font-weights, "bold");
+        &:nth-child(5) {
+          font-weight: map-get($font-weights, 'bold');
         }
 
         &:nth-child(1) {
@@ -45,7 +45,7 @@
       }
     }
 
-    .dane {
+    .contact-data {
       display: flex;
       padding-left: 3rem;
       @media (max-width: 820px) {
@@ -57,7 +57,7 @@
     }
 
     .adress,
-    .numer-kontaktowy {
+    .phone-number {
       display: flex;
       margin: 1rem;
       width: 50%;
@@ -68,7 +68,7 @@
     }
 
     h4 {
-      font-weight: map-get($font-weights, "bold");
+      font-weight: map-get($font-weights, 'bold');
       font-size: 2.5rem;
       padding: 2rem;
       text-align: center;
@@ -76,7 +76,7 @@
 
     h5 {
       font-family: $roboto-slab;
-      font-weight: map-get($font-weights, "normal");
+      font-weight: map-get($font-weights, 'normal');
       font-size: 1.25rem;
       padding-bottom: 1rem;
     }
@@ -98,13 +98,11 @@
     strong {
       font-size: 1.25rem;
       font-family: $roboto-slab;
-      font-weight: map-get($font-weights, "bold");
+      font-weight: map-get($font-weights, 'bold');
     }
 
-
-    .dane-kontaktowe {
+    .contact-details {
       width: 100%;
     }
-
   }
 }
