--- a/src/app/components/content/components/map/scss/_map.scss
+++ b/src/app/components/content/components/map/scss/_map.scss
@@ -1,14 +1,14 @@
-@import "src/app/scss/variables/variables";
-@import "src/app/scss/mixins/mixins";
+@import 'src/app/scss/variables/variables';
+@import 'src/app/scss/mixins/mixins';
 
-.location {
+.location-details {
   color: $text-color;
   justify-content: center;
   @media (max-width: 820px) {
     flex-direction: column;
   }
 
-  .karta-mapy {
+  .map-card {
     background-color: $card-background-color;
     border-radius: 0 1rem 1rem 0;
     width: 90%;
@@ -18,7 +18,7 @@
     }
   }
 
-  .mapa {
+  .map-picture {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,16 +42,16 @@
     }
 
     img {
-      &.mapa-dojazdu {
+      &.map-directions {
         width: 45rem;
         @media (max-width: 624px) {
           width: 15rem;
         }
-        @media(min-width: 625px) and (max-width: 1020px) {
+        @media (min-width: 625px) and (max-width: 1020px) {
           width: 30rem;
         }
       }
-      &.wejscie {
+      &.entrance {
         width: 20rem;
         padding-bottom: 2rem;
         @media (max-width: 624px) {
